[project]
name = "lab7"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.2",
    "fastapi>=0.118.3",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
